WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178866
WebDriver: deserializeTimeouts should fail if the value is not integer
https://bugs.webkit.org/show_bug.cgi?id=178866
Summary
WebDriver: deserializeTimeouts should fail if the value is not integer
Carlos Garcia Campos
Reported
2017-10-26 06:53:15 PDT
See
https://w3c.github.io/webdriver/webdriver-spec.html#dfn-deserialize-as-a-timeout
"If value is not an integer, or it is less than 0 or greater than 2^64 – 1, return error with error code invalid argument."
Attachments
Patch
(1.80 KB, patch)
2017-10-26 06:56 PDT
,
Carlos Garcia Campos
bburg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-10-26 06:56:53 PDT
Created
attachment 325006
[details]
Patch
Blaze Burg
Comment 2
2017-10-26 10:17:45 PDT
Comment on
attachment 325006
[details]
Patch r=me
Carlos Garcia Campos
Comment 3
2017-10-27 00:12:06 PDT
Committed
r224089
: <
https://trac.webkit.org/changeset/224089
>
Radar WebKit Bug Importer
Comment 4
2017-11-15 12:43:47 PST
<
rdar://problem/35568032
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug